unpackaged/objects/Team_setup__mdt.object
<CustomObject>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Sweden</fullName>
          <default>true</default>
          <label>Sweden</label>
        </value>
        <value>
          <fullName>UK</fullName>
        </value>
        <value>
          <fullName>Norway</fullName>
        </value>
        <value>
          <fullName>USA</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>IMPL</fullName>
          <default>true</default>
          <label>IMPL</label>
        </value>
        <value>
          <fullName>PREP</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Active</fullName>
          <default>true</default>
          <label>Active</label>
        </value>
        <value>
          <fullName>Retired</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Team setup</label>
  <pluralLabel>Team setups</pluralLabel>
</CustomObject>